--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 		<div class="aboutme-container"></div>
 		<div class="aboutme-img">
-			<img src="images/img21.jpg" alt="">
-			<img src="images/img22.jpg" alt="">
-			<img src="images/img23.jpg" alt="">
+			<img src="img21.jpg" alt="">
+			<img src="img22.jpg" alt="">
+			<img src="img23.jpg" alt="">
 		</div>
 
 		<div class="aboutme-content">
@@ -177,13 +177,13 @@
 				<!-- Additional required wrapper -->
 			<div class="swiper-wrapper">
 	  			<!-- Slides -->
-	 		<div class="swiper-slide"><img src="images/gallery2.jpg"></div>
-	 		<div class="swiper-slide"><img src="images/gallery1.jpg"></div>
-			<div class="swiper-slide"><img src="images/gallery 6.jpg"></div>
-			<div class="swiper-slide"><img src="images/gallery 7.jpg"></div>
-			<div class="swiper-slide"><img src="images/gallery 8.jpg"></div>
-			<div class="swiper-slide"><img src="images/gallery 5.jpg"></div>
-			<div class="swiper-slide"><img src="images/gallery 4.jpg"></div>
+	 		<div class="swiper-slide"><img src="gallery2.jpg"></div>
+	 		<div class="swiper-slide"><img src="gallery1.jpg"></div>
+			<div class="swiper-slide"><img src="gallery 6.jpg"></div>
+			<div class="swiper-slide"><img src="gallery 7.jpg"></div>
+			<div class="swiper-slide"><img src="gallery 8.jpg"></div>
+			<div class="swiper-slide"><img src="gallery 5.jpg"></div>
+			<div class="swiper-slide"><img src="gallery 4.jpg"></div>
 			  
 			</div>
 			<!-- If we need pagination -->
@@ -198,7 +198,7 @@
 	
 	<div class="video.container">
 		<br><video width="640" height="360" autoplay muted loop>
-			<source src="images/vd1.mp4" type="video/mp4">
+			<source src="vd1.mp4" type="video/mp4">
 		</video>
 	</div>
 
