--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 			<div class="home-img">
-				<img src="images/home2.jpg" alt="">
+				<img src="home2.jpg" alt="">
 			</div>
 	</section>
 
@@ -86,7 +86,7 @@
 			  <div class="timeline-dot"></div>
 				<div class="timeline-date">2011-2016</div> 
 				<div class="timeline-content">
-					<img src="images/skmrt.jpg">
+					<img src="skmrt.jpg">
 					<h3>Primary School</h3>
 					<p>SK Muhibbah Raya, Tawau</p>
 					<p>UPSR: 3A 1B 1C</p>
@@ -99,7 +99,7 @@
 				<div class="timeline-dot"></div>
 				  <div class="timeline-date">2017-2018</div> 
 				  <div class="timeline-content">
-					<img src="images/Smkstpatricklogo.png">
+					<img src="Smkstpatricklogo.png">
 					<h3>Secondary School</h3>
 					<p>SM St. Patrick, Tawau</p>
 				</div>
@@ -110,7 +110,7 @@
 				<div class="timeline-dot"></div>
 				  <div class="timeline-date">2018-2021</div> 
 				  <div class="timeline-content">
-					<img src="images/Sekolah_Menengah_Konven_St._Ursula.png">
+					<img src="Sekolah_Menengah_Konven_St._Ursula.png">
 					<h3>Secondary School</h3>
 					  <p>SM Convent St. Ursula, Tawau</p>
 					  <p>SPM: 1A+ 2A 1A- 2B 2B+</p>
@@ -122,7 +122,7 @@
 				<div class="timeline-dot"></div>
 				  <div class="timeline-date">2022-2025</div> 
 				  <div class="timeline-content">
-					<img src="images/LogoUiTM.png">
+					<img src="LogoUiTM.png">
 					<h3>University</h3>
 					  <p>UiTM Kampus Samarahan</p>
 					  <p>Diploma in Information Management</p>
